Changes for 1.1alpha1:

 - added housekeeping of trends (Alexei)
 - added column items.trends (Alexei)
 - added escaping of SQL statements where needed (Alexei)
 - added src/zabbix_sucker/checks_agent.[h,c] (Alexei)
 - added src/zabbix_sucker/checks_internal.[h,c] (Alexei)
 - added src/zabbix_sucker/checks_snmp.[h,c] (Alexei)
 - added src/zabbix_sucker/checks_simple.[h,c] (Alexei)
 - send alert when trigger changes its value to TRUE for the first time (Alexei)
 - added support of zabbix[history_str] (Alexei)
 - use $_GET, $_POST, $_COOKIE to be PHP5-compatible. Thanks to Martin MOHNHAUP. (Alexei)
 - added table 'images' (Alexei)
 - added small icons for maps (Alexei)
 - added basic support of background images (Alexei)
 - added frontends/php/include/html.inc.php (Alexei)
 - added support for real delta. item.delta=2. (Alexei)
 - new selection for triggers.php (Alexei)
 - new selection for items.php (Alexei)
 - removed helpdesk.php (Alexei)
 - fixed check of permissions for screenedit.php (Alexei)
 - new selection for graphs in charts.php (Alexei)
 - new selection of maps in maps.php (Alexei)
 - new selection of group and host for latest.php (Alexei)
 - added support for macro {IPADDRESS} (Alexei)
 - added support of localisation (Alexei)
 - added file frontends/php/include/locale_en.inc.php (Alexei)
 - fixed check of NNTP service (Alexei)
 - show metrics (3.01 Gb) in alert messages (Alexei)
 - added support for configurable after-login screen (Alexei)
 - added column users.url (Alexei)
 - email routines moved to email.c (Alexei)
 - fixed hosts.php. Changed <? to <?php. (Alexei)
 - fixed number of trapped items in STATUS OF ZABBIX. Thanks to Igor. (Alexei)
 - fixed proc_cnt[zabbix_agentd] under Linux (Alexei)
 - added list of hosts for groups and IP addresses in host maintenance (Alexei)
 - fixed MacOS X related compilation issues. Thanks to Charles Galpin. (Alexei)
 - fixed calculation of maximum values for table 'trends'. Thanks to Igor. (Alexei)